feat: alteração do projeto com ajustes e estilo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="/src/img/3512a3f3d88928fe0d331b038e6583a2.ico/android-icon-192x192.png" type="image/x-icon">
+    <link rel="stylesheet" href="/src/styles/main-content.css">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/src/styles/aside.css">
     <meta charset="UTF-8">
@@ -15,7 +18,7 @@
                     <div class="icon"></div>
                     <div class="icon"></div>
                 </div>
-                
+
                 <ul class="titles-container">
                     <li class="title">Titulo 1</li>
                     <li class="title">Titulo 2</li>
@@ -40,6 +43,26 @@
                 </ul>
             </div>
         </aside>
+
+        <section class="content">
+            <div class="content__icons-bar"> 
+                <div class="content__container-name-gpt">
+                    <h2>Chat-GPT</h2>
+                    <i class="fa-solid fa-arrow-down"></i>
+                </div>
+                <div class="content__container-temporary">
+                    <h2>Temporário</h2>
+                    <i class="fa-solid fa-circle-user"></i>
+                </div>
+            </div>
+
+            <div class="content__main">
+
+            </div>
+        </section>
     </main>
 </body>
 </html>
+
+<!-- Metodologia BEM 
+ bloco__elemento--modificador -->
