fix(style): corrige bugs e ajusta tamanhos e cores

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="/src/img/3512a3f3d88928fe0d331b038e6583a2.ico/android-icon-192x192.png" type="image/x-icon">
     <link rel="stylesheet" href="/src/styles/main-content.css">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/src/styles/aside.css">
@@ -15,8 +17,8 @@
         <aside class="side">
             <div class="side-content">
                 <div class="container-icons">
-                    <div class="icon"></div>
-                    <div class="icon"></div>
+                    <i class="fa-solid fa-bars fa-xl"></i>
+                    <i class="fa-solid fa-magnifying-glass fa-xl"></i>
                 </div>
 
                 <ul class="titles-container">
@@ -56,8 +58,20 @@
                 </div>
             </div>
 
-            <div class="content__main">
+            <section class="input">
+                    <div class="input__titulo">
+                        <h2>Como posso ajudar?</h2>
+                    </div>
 
+                    <div class="input__container">
+                        <div class="input__txt"><input type="text" placeholder="Pergunte alguma coisa..."></div>
+
+                        <div class="input__icons">
+                            <i class="fa-solid fa-plus"></i>
+                            <i class="fa-solid fa-question"></i>
+                        </div>
+                    </div>
+            </section>
             </div>
         </section>
     </main>
